# alias

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CommandAlias.sln  README.md
.github/workflows/: CMake.yaml
alias/: CMakeLists.txt  config.hpp  exec.hpp  globals.h  main.cpp
alias/test-files/: alias.ini
cmake/inputs/: version.h.in
cmake/modules/: AutoVersion.cmake
command_alias/: ConfigFinder.hpp  Setting.hpp  command_alias.ini  command_alias.vcxproj  command_alias.vcxproj.filters  def.ini  main.cpp
execpipe/: CMakeLists.txt  main.cpp
